usr.sbin/fstyp/ntfs.c
@@ -31,6 +31,8 @@
 #include <sys/cdefs.h>
 __FBSDID("$FreeBSD$");
 
+#ifdef WITH_ICONV
+#endif
 #include <stdint.h>
 #include <stdio.h>
 #include <stdlib.h>
@@ -92,6 +94,8 @@ struct ntfs_bootfile {
 	uint32_t	bf_volsn;
 } __packed;
 
+#ifdef WITH_ICONV
+#endif
 int
 fstyp_ntfs(FILE *fp, char *label, size_t size)
 {
@@ -109,6 +113,7 @@ fstyp_ntfs(FILE *fp, char *label, size_t size)
 	bf = (struct ntfs_bootfile *)read_buf(fp, 0, 512);
 	if (bf == NULL || strncmp(bf->bf_sysid, "NTFS    ", 8) != 0)
 		goto fail;
+#ifdef WITH_ICONV
 
 	mftrecsz = bf->bf_mftrecsz;
 	recsize = (mftrecsz > 0) ? (mftrecsz * bf->bf_bps * bf->bf_spc) : (1 << -mftrecsz);
@@ -150,6 +155,7 @@ fstyp_ntfs(FILE *fp, char *label, size_t size)
 		}
 	}
 
+#endif /* WITH_ICONV */
 	free(bf);
 	free(filerecp);
 
