usr.sbin/fstyp/tests/fstyp_test.sh
@@ -68,6 +68,15 @@ exfat_body() {
 	atf_check -s exit:0 -o inline:"exfat\n" fstyp -u exfat.img
 }
 
+atf_test_case exfat_label
+exfat_label_head() {
+	atf_set "descr" "fstyp(8) can read exFAT labels"
+}
+exfat_label_body() {
+	bzcat $(atf_get_srcdir)/dfr-01-xfat.img.bz2 > exfat.img
+	atf_check -s exit:0 -o inline:"exfat exFat\n" fstyp -u -l exfat.img
+}
+
 atf_test_case empty
 empty_head() {
 	atf_set "descr" "fstyp(8) should fail on an empty file"
@@ -253,6 +262,7 @@ atf_init_test_cases() {
 	atf_add_test_case dir
 	atf_add_test_case empty
 	atf_add_test_case exfat
+	atf_add_test_case exfat_label
 	atf_add_test_case ext2
 	atf_add_test_case ext3
 	atf_add_test_case ext4
